[gd_scene load_steps=11 format=3 uid="uid://bitrl32jww5yg"]

[ext_resource type="Script" uid="uid://dqoxi05i1wjbk" path="res://canvas_layer.gd" id="1_36fyk"]
[ext_resource type="Texture2D" uid="uid://cn62kua7g8mtq" path="res://img/D_Q_NP_2X_910409-MLA80328326865_102024-E.webp" id="2_ycskx"]
[ext_resource type="Texture2D" uid="uid://v6lshruqlh48" path="res://img/D_Q_NP_2X_870875-MLA79552107749_092024-E.webp" id="3_o4hxc"]
[ext_resource type="Texture2D" uid="uid://rmpwtunwpent" path="res://img/D_Q_NP_2X_977776-MLA51776803314_092022-E.webp" id="4_cw4vx"]
[ext_resource type="Texture2D" uid="uid://diomjjcbvo657" path="res://img/D_Q_NP_2X_984591-MLA74127021227_012024-E.webp" id="5_jxhll"]

[sub_resource type="LabelSettings" id="LabelSettings_280g2"]
font_size = 30

[sub_resource type="Animation" id="Animation_5cw7b"]
resource_name = "Boton-derecha2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 700), Vector2(-700, 700)]
}

[sub_resource type="Animation" id="Animation_as1ww"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_36fyk"]
resource_name = "Boton-izquierda2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-700, 700), Vector2(0, 700)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dcl8t"]
_data = {
&"Boton-derecha2": SubResource("Animation_5cw7b"),
&"Boton-izquierda2": SubResource("Animation_36fyk"),
&"RESET": SubResource("Animation_as1ww")
}

[node name="Medias" type="CanvasLayer"]
script = ExtResource("1_36fyk")

[node name="Panel2" type="Panel" parent="."]
offset_top = 700.0
offset_right = 1422.0
offset_bottom = 1177.0
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Panel2"]
position = Vector2(174.5, 166)
scale = Vector2(0.473214, 0.528571)
texture = ExtResource("2_ycskx")
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="Panel2/Sprite2D"]
offset_left = -280.0
offset_top = 285.0
offset_right = 280.0
offset_bottom = 363.0
text = "Pack X 6 Pares De Medias Nena/varon
 1/3 Ca침a Floyd Art. 67"
label_settings = SubResource("LabelSettings_280g2")

[node name="Button" type="Button" parent="Panel2/Sprite2D"]
offset_left = -193.0
offset_top = 400.0
offset_right = 172.0
offset_bottom = 468.0
text = "Agregar"

[node name="Sprite2D2" type="Sprite2D" parent="Panel2"]
position = Vector2(540, 166)
scale = Vector2(0.473214, 0.528571)
texture = ExtResource("3_o4hxc")
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="Panel2/Sprite2D2"]
offset_left = -280.0
offset_top = 285.0
offset_right = 280.0
offset_bottom = 363.0
text = "Pack X5 Remera B치sica Mujer Manga 
Corta Lisa 100% Algod칩n"
label_settings = SubResource("LabelSettings_280g2")

[node name="Button" type="Button" parent="Panel2/Sprite2D2"]
offset_left = -193.0
offset_top = 400.0
offset_right = 172.0
offset_bottom = 468.0
text = "Agregar"

[node name="Sprite2D3" type="Sprite2D" parent="Panel2"]
position = Vector2(900, 166)
scale = Vector2(0.473214, 0.528571)
texture = ExtResource("4_cw4vx")
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="Panel2/Sprite2D3"]
offset_left = -280.0
offset_top = 285.0
offset_right = 280.0
offset_bottom = 363.0
text = "Pack X 5 Remera Basica Hombre 
Manga Corta Lisa 100% Algodon"
label_settings = SubResource("LabelSettings_280g2")

[node name="Button" type="Button" parent="Panel2/Sprite2D3"]
offset_left = -193.0
offset_top = 400.0
offset_right = 172.0
offset_bottom = 468.0
text = "Agregar"

[node name="Sprite2D4" type="Sprite2D" parent="Panel2"]
position = Vector2(1250, 166)
scale = Vector2(0.473214, 0.528571)
texture = ExtResource("5_jxhll")
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="Panel2/Sprite2D4"]
offset_left = -280.0
offset_top = 285.0
offset_right = 280.0
offset_bottom = 363.0
text = "Pack X 5 Remeras Lisas Hombre 100% 
Algod칩n Premium"
label_settings = SubResource("LabelSettings_280g2")

[node name="Button" type="Button" parent="Panel2/Sprite2D4"]
offset_left = -193.0
offset_top = 400.0
offset_right = 172.0
offset_bottom = 468.0
text = "Agregar"

[node name="Izquierda2" type="Button" parent="."]
offset_top = 700.0
offset_right = 50.0
offset_bottom = 1177.0

[node name="Derecha2" type="Button" parent="."]
offset_left = 670.0
offset_top = 700.0
offset_right = 720.0
offset_bottom = 1177.0

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_dcl8t")
}

[connection signal="pressed" from="Izquierda2" to="." method="_on_izquierda_2_pressed"]
[connection signal="pressed" from="Derecha2" to="." method="_on_derecha_2_pressed"]
